--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
     <nav class="navbar">
         <div class="branding">
-            <a href="#" class="branding-logo"> <img src="./img/logo blanco.png" alt="" class="logo">
+            <a href="index.html" class="branding-logo"> <img src="./img/logo blanco.png" alt="" class="logo">
             </a>
         </div>
         <label for="input-hamburger" class="hamburger"></label>
@@ -29,7 +29,6 @@
                 </a>
                 <ul class="submenu">
                     <li><a href="./pages/alq-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
-
                     <li class="has-dropdown">
                         <a href="#" class="menu-link">Departamentos
                             <span class="arrow"></span>
