--- a/pages/alq-2-cochera.html
+++ b/pages/alq-2-cochera.html
@@ -16,7 +16,7 @@
 <header>
     <nav class="navbar">
         <div class="branding">
-            <a href="#" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
+            <a href="../index.html" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
             </a>
         </div>
         <label for="input-hamburger" class="hamburger"></label>
@@ -115,7 +115,7 @@
                     <h2>BUSCADOR DE PROPIEDADES</h2>
                 </div>
                 <div class="wrapper-propiedades">
-                    <h2>EL LUGAR QUE<span></span></h2>
+                    <h2>EL LUGAR QUE<span class="movement"></span></h2>
                     <p>ENCONTRALO ACA:</p>
                 </div>
                 <div class="buscador">
@@ -177,7 +177,7 @@
                         <p><i class="fa fa-object-group"></i> 9 m<sup>2 </sup>
                         <p>Precio Alquiler: $ 9.500</p>
                         <button class="botonprop">
-                            <a class="botonprop" href="ficha-prop-5.html">VER MAS</a>
+                            <a class="botonprop" href="ficha-prop-5.html" target="_blank">VER MAS</a>
                         </button>
                     </div>
                 </div>
