--- a/pages/ficha-prop-7.html
+++ b/pages/ficha-prop-7.html
@@ -16,7 +16,7 @@
 <header>
     <nav class="navbar">
         <div class="branding">
-            <a href="#" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
+            <a href="../index.html" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
             </a>
         </div>
         <label for="input-hamburger" class="hamburger"></label>
@@ -100,13 +100,9 @@
     </nav>
 </header>
 <!--FIN DEL HEADER-->
-
-
-
-
         <!--INICIO DEL MAIN-->
         <main>
-            <section class="tarjetapropiedad">
+            <section class="margenbien">
                 <div class="menuretorno">
                     <div class="index"><a href="../index.html"> INICIO</a></div>
                     <div class="index2"><a href="ven-1-ficha-todas.html"> / ALQUILER</a></div>
@@ -114,6 +110,8 @@
                     <div class="index4"><a href="venta-3-casa-4d.html"> / 4 DORMITORIOS</a></div>
                     <div class="page">/ COLODRERO 1600</div>
                 </div>
+            </section>
+            <section class="tarjetapropiedad">
                 <div class="columna1prop">
                     <div class="titulocasa">
                         <div class="titulocasa1">
@@ -125,31 +123,66 @@
                             <h2>u$s 210.000</h2>
                         </div>
                     </div>
-                    <div class="fotos">
-                        <div class="selector">
-                            <li><a href="#"></a>Fotos</li>
-                            <li><a href="#"></a>Video</li>
-                            <li><a href="#"></a>Plano</li>
-                            <li><a href="#"></a>Ubicacion</li>
-                            <li><a href="#"></a>360°</li>
-                        </div>
-                        <div class="fotosmain">
-                            <img src="../img/WhatsApp Image 2021-03-15 at 10.30.08.jpeg" alt="">
-                        </div>
-
-                        <div class="redes">
-                            <h4>COMPARTI ESTA FICHA</h4>
-                            <div>
-                                <a href="https://walink.co/541ed3" target="_blank"> <i
-                                        class="fa fa-whatsapp whatsapp-icon"></i></a>
-                                <a href="https://www.facebook.com/" target="blank"><i
-                                        class="fa-brands fa-facebook fa-2x"></i></a>
-                                <a href="https://www.instagram.com/" target="blank"><i
-                                        class="fa-brands fa-instagram fa-2x"></i></a>
+                    <div class="fyselect">
+                        <div class="carouselficha" aria-label="carousel" Tabindex="0">
+                            <div class="carousel__nav-ficha">
+                                <a class="slider-nav-ficha" href="#slide-1" aria-label="Go to slide 1">FOTOS</a>
+                                <a class="slider-nav-ficha" href="#slide-2" aria-label="Go to slide 2">VIDEO</a>
+                                <a class="slider-nav-ficha" href="#slide-3" aria-label="Go to slide 3">PLANO</a>
+                                <a class="slider-nav-ficha" href="#slide-4" aria-label="Go to slide 4">UBICACION</a>
+                                <a class="slider-nav-ficha" href="#slide-5" aria-label="Go to slide 5">360°</a>
+                            </div>
+                            <div class="slidesficha">
+                                <div class="slides-item-ficha slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                                    <div class="flip-card-ficha">
+                                        <div class="flip-card-inner-ficha">
+                                            <div class="flip-card-front-ficha">
+                                                <img src="../img/WhatsApp Image 2021-03-15 at 10.30.08.jpeg" alt="foto">
+    
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slides-item-ficha slide-1" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+                                    <div class="flip-card-ficha">
+                                        <div class="flip-card-inner-ficha">
+                                            <div class="flip-card-front-ficha">
+                                                <img src="../img/Imagen_no_disponible.svg.png" alt="video">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slides-item-ficha slide-1" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+                                    <div class="flip-card-ficha">
+                                        <div class="flip-card-inner-ficha">
+                                            <div class="flip-card-front-ficha">
+                                                <img src="../img/plano.jpg" alt="plano">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slides-item-ficha slide-1" id="slide-4" aria-label="slide 4 of 5" tabindex="0">
+                                    <div class="flip-card-ficha">
+                                        <div class="flip-card-inner-ficha">
+                                            <div class="flip-card-front-ficha">
+                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.2227591030514!2d-60.69241198533872!3d-31.627750713671002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9ec45ffd23d%3A0xf21a1840bf5be2!2sPedro%20D%C3%ADaz%20Colodrero%201685%2C%20S3002%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1668566911841!5m2!1ses!2sar" width="640" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slides-item-ficha slide-1" id="slide-5" aria-label="slide 5 of 5" tabindex="0">
+                                    <div class="flip-card-ficha">
+                                        <div class="flip-card-inner-ficha">
+                                            <div class="flip-card-front-ficha">
+                                                <img src="../img/Imagen_no_disponible.svg.png" alt="360">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-
-                        <div class="resumen1">
+                    </div>
+                    <div class="fotos">
+                            <div class="resumen1">
                             <h3>Precio de Venta:</h3>
                             <h4>U$S210.000</h4>
                             <h5>Precio de Alquiler:</h5>
@@ -190,8 +223,6 @@
                             </li>
                             <li><i class="fa fa-check-square"></i> Acceso:<p>-</p>
                             </li>
-                        </ul>
-                        <ul class="caractgrales2">
                             <li><i class="fa fa-check-square"></i> Zonificación:<p>Urbana</p>
                             </li>
                             <li><i class="fa fa-check-square"></i> Disposición:<p>Frente</p>
@@ -217,9 +248,9 @@
                             posee gas natural.</p>
                     </div>
 
-                    <div class="ambientes">
+                    <div class="caractgrales">
                         <h3>DISTRIBUCIÓN DE AMBIENTES</h3>
-                        <ul>
+                        <ul class="caractgrales3">
                             <li><i class="fa fa-check-square"></i> Hall de Ingreso</li>
                             <li><i class="fa fa-check-square"></i> Living</li>
                             <li><i class="fa fa-check-square"></i> Oficina o estudio</li>
@@ -233,18 +264,18 @@
                             <li><i class="fa fa-check-square"></i> Terraza</li>
                         </ul>
                     </div>
-                    <div class="comodidades">
+                    <div class="caractgrales">
                         <h3>COMODIDADES</h3>
-                        <ul>
+                        <ul class="caractgrales3">
                             <li><i class="fa fa-check-square"></i> Aire Acondicionado</li>
                             <li><i class="fa fa-check-square"></i> Alarma</li>
                             <li><i class="fa fa-check-square"></i> Parrilla</li>
                             <li><i class="fa fa-check-square"></i> Apto Mascotas</li>
                         </ul>
                     </div>
-                    <div class="servicios">
+                    <div class="caractgrales">
                         <h3>SERVICIOS</h3>
-                        <ul>
+                        <ul class="caractgrales3">
                             <li><i class="fa fa-check-square"></i> Agua Corriente</li>
                             <li><i class="fa fa-check-square"></i> Desagüe Cloacal</li>
                             <li><i class="fa fa-check-square"></i> Gas Natural</li>
@@ -279,7 +310,18 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="redes">
+                        <h4>COMPARTI ESTA FICHA</h4>
+                        <div>
+                            <a href="https://walink.co/541ed3" target="_blank"> <i
+                                    class="fa fa-whatsapp whatsapp-icon"></i></a>
+                            <a href="https://www.facebook.com/" target="blank"><i
+                                    class="fa-brands fa-facebook fa-2x"></i></a>
+                            <a href="https://www.instagram.com/" target="blank"><i
+                                    class="fa-brands fa-instagram fa-2x"></i></a>
+                        </div>
+                    </div>
+    
                 </div>
             </section>
 
