--- a/pages/venta-1-ficha-todas.html
+++ b/pages/venta-1-ficha-todas.html
@@ -16,7 +16,7 @@
 <header>
     <nav class="navbar">
         <div class="branding">
-            <a href="#" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
+            <a href="../index.html" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
             </a>
         </div>
         <label for="input-hamburger" class="hamburger"></label>
@@ -115,7 +115,7 @@
                     <h2>BUSCADOR DE PROPIEDADES</h2>
                 </div>
                 <div class="wrapper-propiedades">
-                    <h2>EL LUGAR QUE<span></span></h2>
+                    <h2>EL LUGAR QUE<span class="movement"></span></h2>
                     <p>ENCONTRALO ACA:</p>
                 </div>
                 <div class="buscador">
@@ -176,7 +176,7 @@
                                 class="fa fa-bath"></i> 2 </p>
                         <p>Precio Venta: u$s 220.000</p>
                         <button class="botonprop">
-                            <a class="botonprop" href="ficha-prop-6.html">VER MAS</a>
+                            <a class="botonprop" href="ficha-prop-6.html" target="_blank">VER MAS</a>
                         </button>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                                 class="fa fa-bath"></i> 1 </p>
                         <p>Precio Venta: u$s 210.000</p>
                         <button class="botonprop">
-                            <a class="botonprop" href="ficha-prop-7.html">VER MAS</a>
+                            <a class="botonprop" href="ficha-prop-7.html" target="_blank">VER MAS</a>
                         </button>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                         <p><i class="fa fa-object-group"></i> 9 m<sup>2 </sup> 
                         <p>Precio Venta: u$s 22.000</p>
                         <button class="botonprop">
-                            <a class="botonprop" href="ficha-prop-8.html">VER MAS</a>
+                            <a class="botonprop" href="ficha-prop-8.html" target="_blank">VER MAS</a>
                         </button>
                     </div>
                 </div>
