--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
 <header>
     <nav class="navbar">
         <div class="branding">
-            <a href="#" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
+            <a href="../index.html" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
             </a>
         </div>
         <label for="input-hamburger" class="hamburger"></label>
