--- a/pages/venta-3-dpto-4d.html
+++ b/pages/venta-3-dpto-4d.html
@@ -16,7 +16,7 @@
 <header>
     <nav class="navbar">
         <div class="branding">
-            <a href="#" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
+            <a href="../index.html" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
             </a>
         </div>
         <label for="input-hamburger" class="hamburger"></label>
@@ -115,7 +115,7 @@
                     <h2>BUSCADOR DE PROPIEDADES</h2>
                 </div>
                 <div class="wrapper-propiedades">
-                    <h2>EL LUGAR QUE<span></span></h2>
+                    <h2>EL LUGAR QUE<span class="movement"></span></h2>
                     <p>ENCONTRALO ACA:</p>
                 </div>
                 <div class="buscador">
