--- a/pages/ficha-prop-8.html
+++ b/pages/ficha-prop-8.html
@@ -65,7 +65,6 @@
                 <ul class="submenu">
                     <li><a href="venta-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
                     <li class="has-dropdown">
-
                         <a href="#" class="menu-link">Departamentos
                             <span class="arrow"></span>
                         </a>
@@ -92,8 +91,8 @@
                     <li><a href="venta-2-galpon.html" class="menu-link">Galpon</a></li>
                     <li><a href="venta-2-oficina.html" class="menu-link">Oficina/Local</a></li>
                     <li><a href="venta-2-terreno.html" class="menu-link">Terrenos</a></li>
+                </ul>
             </li>
-            </ul>
             <li><a href="quienessomos.html" class="menu-link">QUIENES SOMOS</a></li>
             <li><a href="contacto.html" class="menu-link">CONTACTO</a></li>
             </ul>
@@ -105,7 +104,7 @@
         <section class="margenbien">
             <div class="menuretorno">
                 <div class="index"><a href="../index.html"> INICIO</a></div>
-                <div class="index2"><a href="ven-1-ficha-todas.html"> / ALQUILER</a></div>
+                <div class="index2"><a href="venta-1-ficha-todas.html"> / ALQUILER</a></div>
                 <div class="index3"><a href="venta-2-cochera.html"> / COCHERA</a></div>
                 <div class="page">/ MONTEVIDEO 1300</div>
             </div>
@@ -137,7 +136,6 @@
                                     <div class="flip-card-inner-ficha">
                                         <div class="flip-card-front-ficha">
                                             <img src="../img/cocheramont.jpeg" alt="foto">
-
                                         </div>
                                     </div>
                                 </div>
@@ -164,7 +162,11 @@
                                 <div class="flip-card-ficha">
                                     <div class="flip-card-inner-ficha">
                                         <div class="flip-card-front-ficha">
-                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.8362146199192!2d-60.646245885292615!3d-32.95533337965709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab0e24856457%3A0xc970479d508916f0!2sMontevideo%201350%2C%20S2000%20BSB%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1668566727183!5m2!1ses!2sar" width="640" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                        </div>
+                                            <iframe
+                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.8362146199192!2d-60.646245885292615!3d-32.95533337965709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab0e24856457%3A0xc970479d508916f0!2sMontevideo%201350%2C%20S2000%20BSB%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1668566727183!5m2!1ses!2sar"
+                                                width="640" height="320" style="border:0;" allowfullscreen=""
+                                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -238,11 +240,9 @@
                     <p>Espectacular cochera en pleno centro de la ciudad. Planta baja. Acceso con control remoto.
                         Seguridad privada las 24hs. Excelente inversión en una de las zonas más transitadas. </p>
                 </div>
-
                 <div class="caractgrales">
                     <h3>DISTRIBUCIÓN DE AMBIENTES</h3>
                     <ul class="caractgrales3">
-
                     </ul>
                 </div>
                 <div class="caractgrales">
@@ -251,7 +251,6 @@
                         <li><i class="fa fa-check-square"></i> Seguridad 24Hs</li>
                         <li><i class="fa fa-check-square"></i> Videovigilancia</li>
                         <li><i class="fa fa-check-square"></i> Control Remoto</li>
-
                     </ul>
                 </div>
                 <div class="caractgrales">
@@ -298,10 +297,8 @@
                                 class="fa-brands fa-instagram fa-2x"></i></a>
                     </div>
                 </div>
-
             </div>
         </section>
-
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
@@ -332,11 +329,10 @@
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
-
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
             <div class="piecolum1">
-                <li class="logopie"><img width="210" src="./img/logo blanco.png" alt="logo_blanco"></li>
+                <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
                 <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
                         1811 Of. 01</li></a>
                 <li class="textopie">Teléfono: (0341) 3132818</li>
@@ -345,13 +341,12 @@
             </div>
             <div class="titulomenupie">
                 <h4>SERVICIOS</h4>
-                <li><a class="textomenupie" href="./pages/quienessomos.html">Quienes Somos</a></li>
-                <li><a class="textomenupie" href="./pages/administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
                 <li><a class="textomenupie" href="alq-1-ficha-todas.html">Alquiler</a>
                 <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
-
-                <li><a class="textomenupie" href="./pages/contacto.html">Contacto</a></li>
-                <li><a class="textomenupie" href="./pages/termycond.html">Políticas de Privacidad</a></li>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
                 </p>
             </div>
             <div class="newsletter">
@@ -369,7 +364,6 @@
         <!--FIN PIE DE PAGINA-->
     </main>
     <!--FIN DEL MAIN-->
-
     <!--FOOTER-->
     <footer class="footer">
         <div>
@@ -380,8 +374,9 @@
         </div>
     </footer>
     <!--FIN DEL FOOTER-->
-
     <a href="https://walink.co/541ed3" class="whatsapp" target="_blank"> <i
             class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
     <a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
 </body>
+
+</html>
