--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -12,105 +12,104 @@
 </head>
 
 <body>
-<!--INICIO DEL HEADER-->
-<header>
-    <nav class="navbar">
-        <div class="branding">
-            <a href="../index.html" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
-            </a>
-        </div>
-        <label for="input-hamburger" class="hamburger"></label>
-        <input type="checkbox" id="input-hamburger" hidden>
-        <ul class="menu">
-            <li><a href="../index.html" class="menu-link">INICIO</a></li>
-            <li><a href="administracion.html" class="menu-link">ADMINISTRACION</a></li>
+    <!--INICIO DEL HEADER-->
+    <header>
+        <nav class="navbar">
+            <div class="branding">
+                <a href="../index.html" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
+                </a>
+            </div>
+            <label for="input-hamburger" class="hamburger"></label>
+            <input type="checkbox" id="input-hamburger" hidden>
+            <ul class="menu">
+                <li><a href="../index.html" class="menu-link">INICIO</a></li>
+                <li><a href="administracion.html" class="menu-link">ADMINISTRACION</a></li>
+                <li class="has-dropdown">
+                    <a href="#" class="menu-link">ALQUILERES
+                        <span class="arrow"></span>
+                    </a>
+                    <ul class="submenu">
+                        <li><a href="alq-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
+                        <li class="has-dropdown">
+                            <a href="#" class="menu-link">Departamentos
+                                <span class="arrow"></span>
+                            </a>
+                            <ul class="submenu">
+                                <li><a href="alq-2-dpto.html" class="menu-link">> Ver Todos</a></li>
+                                <li><a href="alq-3-dpto-mono.html" class="menu-link">> Monoambiente</a></li>
+                                <li><a href="alq-3-dpto-2d.html" class="menu-link">> 1 Dormitorio</a></li>
+                                <li><a href="alq-3-dpto-2d.html" class="menu-link">> 2 Dormitorios</a></li>
+                                <li><a href="alq-3-dpto-3d.html" class="menu-link">> 3 Dormitorios</a></li>
+                                <li><a href="alq-3-dpto-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
+                            </ul>
+                        <li class="has-dropdown">
+                            <a href="#" class="menu-link">Casas
+                                <span class="arrow"></span>
+                            </a>
+                            <ul class="submenu">
+                                <li><a href="alq-2-casa.html" class="menu-link">> Ver Todos</a></li>
+                                <li><a href="alq-3-casa-1d.html" class="menu-link">> 1 Dormitorio</a></li>
+                                <li><a href="alq-3-casa-2d.html" class="menu-link">> 2 Dormitorios</a></li>
+                                <li><a href="alq-3-casa-3d.html" class="menu-link">> 3 Dormitorios</a></li>
+                                <li><a href="alq-3-casa-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
+                            </ul>
+                        <li><a href="alq-2-cochera.html" class="menu-link">Cochera</a></li>
+                        <li><a href="alq-2-galpon.html" class="menu-link">Galpon</a></li>
+                        <li><a href="alq-2-oficina.html" class="menu-link">Oficina/Local</a></li>
+                </li>
+            </ul>
             <li class="has-dropdown">
-                <a href="#" class="menu-link">ALQUILERES
+                <a href="#" class="menu-link">VENTAS
                     <span class="arrow"></span>
                 </a>
                 <ul class="submenu">
-                    <li><a href="alq-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
+                    <li><a href="venta-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
                     <li class="has-dropdown">
+
                         <a href="#" class="menu-link">Departamentos
                             <span class="arrow"></span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="alq-2-dpto.html" class="menu-link">> Ver Todos</a></li>
-                            <li><a href="alq-3-dpto-mono.html" class="menu-link">> Monoambiente</a></li>
-                            <li><a href="alq-3-dpto-2d.html" class="menu-link">> 1 Dormitorio</a></li>
-                            <li><a href="alq-3-dpto-2d.html" class="menu-link">> 2 Dormitorios</a></li>
-                            <li><a href="alq-3-dpto-3d.html" class="menu-link">> 3 Dormitorios</a></li>
-                            <li><a href="alq-3-dpto-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
+                            <li><a href="venta-2-depto.html" class="menu-link">> Ver Todos</a></li>
+                            <li><a href="venta-3-dpto-mono.html" class="menu-link">> Monoambiente</a></li>
+                            <li><a href="venta-3-dpto-1d.html" class="menu-link">> 1 Dormitorio</a></li>
+                            <li><a href="venta-3-dpto-2d.html" class="menu-link">> 2 Dormitorios</a></li>
+                            <li><a href="venta-3-dpto-3d.html" class="menu-link">> 3 Dormitorios</a></li>
+                            <li><a href="venta-3-dpto-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
                         </ul>
                     <li class="has-dropdown">
-                        <a href="#" class="menu-link">Casas
+                        <a href="./" class="menu-link">Casas
                             <span class="arrow"></span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="alq-2-casa.html" class="menu-link">> Ver Todos</a></li>
-                            <li><a href="alq-3-casa-1d.html" class="menu-link">> 1 Dormitorio</a></li>
-                            <li><a href="alq-3-casa-2d.html" class="menu-link">> 2 Dormitorios</a></li>
-                            <li><a href="alq-3-casa-3d.html" class="menu-link">> 3 Dormitorios</a></li>
-                            <li><a href="alq-3-casa-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
+                            <li><a href="venta-2-casa.html" class="menu-link">> Ver Todos</a></li>
+                            <li><a href="venta-3-casa-1d.html" class="menu-link">> 1 Dormitorio</a></li>
+                            <li><a href="venta-3-casa-2d.html" class="menu-link">> 2 Dormitorios</a></li>
+                            <li><a href="venta-3-casa-3d.html" class="menu-link">> 3 Dormitorios</a></li>
+                            <li><a href="venta-3-casa-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
                         </ul>
-                    <li><a href="alq-2-cochera.html" class="menu-link">Cochera</a></li>
-                    <li><a href="alq-2-galpon.html" class="menu-link">Galpon</a></li>
-                    <li><a href="alq-2-oficina.html" class="menu-link">Oficina/Local</a></li>
+                    <li><a href="venta-2-cochera.html" class="menu-link">Cochera</a></li>
+                    <li><a href="venta-2-galpon.html" class="menu-link">Galpon</a></li>
+                    <li><a href="venta-2-oficina.html" class="menu-link">Oficina/Local</a></li>
+                    <li><a href="venta-2-terreno.html" class="menu-link">Terrenos</a></li>
+                </ul>
             </li>
-        </ul>
-        <li class="has-dropdown">
-            <a href="#" class="menu-link">VENTAS
-                <span class="arrow"></span>
-            </a>
-            <ul class="submenu">
-                <li><a href="venta-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
-                <li class="has-dropdown">
-
-                    <a href="#" class="menu-link">Departamentos
-                        <span class="arrow"></span>
-                    </a>
-                    <ul class="submenu">
-                        <li><a href="venta-2-depto.html" class="menu-link">> Ver Todos</a></li>
-                        <li><a href="venta-3-dpto-mono.html" class="menu-link">> Monoambiente</a></li>
-                        <li><a href="venta-3-dpto-1d.html" class="menu-link">> 1 Dormitorio</a></li>
-                        <li><a href="venta-3-dpto-2d.html" class="menu-link">> 2 Dormitorios</a></li>
-                        <li><a href="venta-3-dpto-3d.html" class="menu-link">> 3 Dormitorios</a></li>
-                        <li><a href="venta-3-dpto-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
-                    </ul>
-                <li class="has-dropdown">
-                    <a href="./" class="menu-link">Casas
-                        <span class="arrow"></span>
-                    </a>
-                    <ul class="submenu">
-                        <li><a href="venta-2-casa.html" class="menu-link">> Ver Todos</a></li>
-                        <li><a href="venta-3-casa-1d.html" class="menu-link">> 1 Dormitorio</a></li>
-                        <li><a href="venta-3-casa-2d.html" class="menu-link">> 2 Dormitorios</a></li>
-                        <li><a href="venta-3-casa-3d.html" class="menu-link">> 3 Dormitorios</a></li>
-                        <li><a href="venta-3-casa-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
-                    </ul>
-                <li><a href="venta-2-cochera.html" class="menu-link">Cochera</a></li>
-                <li><a href="venta-2-galpon.html" class="menu-link">Galpon</a></li>
-                <li><a href="venta-2-oficina.html" class="menu-link">Oficina/Local</a></li>
-                <li><a href="venta-2-terreno.html" class="menu-link">Terrenos</a></li>
-        </li>
-        </ul>
-        <li><a href="quienessomos.html" class="menu-link">QUIENES SOMOS</a></li>
-        <li><a href="contacto.html" class="menu-link">CONTACTO</a></li>
-        </ul>
-    </nav>
-</header>
-<!--FIN DEL HEADER-->
-
-
-
-    <!--por que elegirnos?-->
+            <li><a href="quienessomos.html" class="menu-link">QUIENES SOMOS</a></li>
+            <li><a href="contacto.html" class="menu-link">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!--FIN DEL HEADER-->
     <main>
+        <!--por que elegirnos?-->
         <section class="fondoadm">
             <div class="porqueadmin">
                 <div class="tituloadmin">
                     <h1>¿POR QUE ELEGIRNOS?</h1>
                     <p> Somos una empresa con basta experiencia en el mercado. Nos enfocamos en aprender y evolucionar
-                        constantemente adaptándonos, incluso, a las nuevas normativas. Garantizamos absoluta confiabilidad y profesionalismo. Contamos con un equipo de profesionales dedicados a brindar soluciones posibles a cada caso concreto.
+                        constantemente adaptándonos, incluso, a las nuevas normativas. Garantizamos absoluta
+                        confiabilidad y profesionalismo. Contamos con un equipo de profesionales dedicados a brindar
+                        soluciones posibles a cada caso concreto.
                     </p>
                 </div>
                 <div class="cuadro1">
@@ -133,7 +132,6 @@
                 </div>
             </div>
         </section>
-
         <!--formulario contacto-->
         <section class="tituloformcontacto">
             <h3>CONTACTANOS</h3>
@@ -151,7 +149,7 @@
                         <form action="./formpage.html" method="get" enctype="application/x-www-form-urlencoded">
                             <label for="Nombre"></label><input id="Nombre" type="text" name="nombre"
                                 placeholder="Ingresa tu Nombre">
-                                <label for="telefono"> </label><input id="telefono" type="text" name="telefono"
+                            <label for="telefono"> </label><input id="telefono" type="text" name="telefono"
                                 placeholder="Ingresa tu Teléfono">
                             <label for="Email"> </label><input id="Email" type="text" name="email"
                                 placeholder="Ingresa tu Email">
@@ -167,25 +165,6 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             </div>
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
@@ -215,7 +194,6 @@
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
-
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
             <div class="piecolum1">
@@ -231,8 +209,8 @@
                 <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
                 <li><a class="textomenupie" href="administracion.html">Administración</a></li>
                 <li><a class="textomenupie" href="alq-1-ficha-todas.html">Alquiler</a>
-                    <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
-                    <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
                 <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
                 </p>
             </div>
@@ -251,7 +229,6 @@
         <!--FIN PIE DE PAGINA-->
     </main>
     <!--FIN DEL MAIN-->
-
     <!--FOOTER-->
     <footer class="footer">
         <div>
@@ -263,9 +240,8 @@
     </footer>
     <!-- FIN DEL FOOTER-->
     <a href="https://walink.co/541ed3" class="whatsapp" target="_blank"> <i
-        class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
-<a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
-
+            class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
+    <a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
 </body>
 
 </html>
