--- a/pages/ficha-prop-1.html
+++ b/pages/ficha-prop-1.html
@@ -93,18 +93,14 @@
                     <li><a href="venta-2-galpon.html" class="menu-link">Galpon</a></li>
                     <li><a href="venta-2-oficina.html" class="menu-link">Oficina/Local</a></li>
                     <li><a href="venta-2-terreno.html" class="menu-link">Terrenos</a></li>
+                </ul>
             </li>
-            </ul>
             <li><a href="quienessomos.html" class="menu-link">QUIENES SOMOS</a></li>
             <li><a href="contacto.html" class="menu-link">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
     <!--FIN DEL HEADER-->
-
-
-
-
     <!--INICIO DEL MAIN-->
     <main>
         <section class="margenbien">
@@ -116,7 +112,6 @@
                 <div class="page">/ CAMPODONICO 3300</div>
             </div>
         </section>
-
         <section class="tarjetapropiedad">
             <div class="columna1prop">
                 <div class="titulocasa">
@@ -171,7 +166,10 @@
                                 <div class="flip-card-ficha">
                                     <div class="flip-card-inner-ficha">
                                         <div class="flip-card-front-ficha">
-                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.4862017167156!2d-60.6734332!3d-32.9381706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab5640d24feb%3A0xbeb93b3772749564!2sConstituci%C3%B3n%20650%2C%20S2002MHJ%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1668558252091!5m2!1ses!2sar" width="640" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                            <iframe
+                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.4862017167156!2d-60.6734332!3d-32.9381706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab5640d24feb%3A0xbeb93b3772749564!2sConstituci%C3%B3n%20650%2C%20S2002MHJ%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1668558252091!5m2!1ses!2sar"
+                                                width="640" height="320" style="border:0;" allowfullscreen=""
+                                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -200,7 +198,6 @@
                         <p>---</p>
                         <h5>Financiacion: </h5>
                         <p>---</p>
-
                     </div>
                     <div class="resumen2">
                         <h3>Superficie:</h3>
@@ -336,7 +333,6 @@
                 </div>
             </div>
         </section>
-
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
@@ -367,11 +363,10 @@
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
-
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
             <div class="piecolum1">
-                <li class="logopie"><img width="210" src="./img/logo blanco.png" alt="logo_blanco"></li>
+                <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
                 <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
                         1811 Of. 01</li></a>
                 <li class="textopie">Teléfono: (0341) 3132818</li>
@@ -380,13 +375,12 @@
             </div>
             <div class="titulomenupie">
                 <h4>SERVICIOS</h4>
-                <li><a class="textomenupie" href="./pages/quienessomos.html">Quienes Somos</a></li>
-                <li><a class="textomenupie" href="./pages/administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
                 <li><a class="textomenupie" href="alq-1-ficha-todas.html">Alquiler</a>
                 <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
-
-                <li><a class="textomenupie" href="./pages/contacto.html">Contacto</a></li>
-                <li><a class="textomenupie" href="./pages/termycond.html">Políticas de Privacidad</a></li>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
                 </p>
             </div>
             <div class="newsletter">
@@ -404,7 +398,6 @@
         <!--FIN PIE DE PAGINA-->
     </main>
     <!--FIN DEL MAIN-->
-
     <!--FOOTER-->
     <footer class="footer">
         <div>
@@ -415,8 +408,9 @@
         </div>
     </footer>
     <!--FIN DEL FOOTER-->
-
     <a href="https://walink.co/541ed3" class="whatsapp" target="_blank"> <i
             class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
     <a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
 </body>
+
+</html>
