--- a/pages/ficha-prop-2.html
+++ b/pages/ficha-prop-2.html
@@ -111,7 +111,6 @@
                 <div class="page">/ CAMPODONICO 3300</div>
             </div>
         </section>
-
         <section class="tarjetapropiedad">
             <div class="columna1prop">
                 <div class="titulocasa">
@@ -245,7 +244,6 @@
                     <p>Excelente casa reciclada a nuevo en zona oeste de la ciudad. Consta de dos dormitorios; baño
                         pequeño; cocina comedor remodelada a nuevo. El inmueble es eléctrico. Opción cochera. </p>
                 </div>
-
                 <div class="caractgrales">
                     <h3>DISTRIBUCIÓN DE AMBIENTES</h3>
                     <ul class="caractgrales3">
@@ -269,7 +267,6 @@
                         <li><i class="fa fa-check-square"></i> Laundry</li>
                     </ul>
                 </div>
-
                 <div class="caractgrales">
                     <h3>INGRESO:</h3>
                     <ul class="caractgrales2">
@@ -336,7 +333,6 @@
                 </div>
             </div>
         </section>
-
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
@@ -367,7 +363,6 @@
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
-
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
             <div class="piecolum1">
@@ -380,14 +375,13 @@
             </div>
             <div class="titulomenupie">
                 <h4>SERVICIOS</h4>
-                <li><a class="textomenupie" href="./pages/quienessomos.html">Quienes Somos</a></li>
-                <li><a class="textomenupie" href="./pages/administracion.html">Administración</a></li>
-                <li><a class="textomenupie" href="./pages/alquiler.html">Alquiler</a>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
                 <li><a class="textomenupie" href="alq-1-ficha-todas.html">Alquiler</a>
                 <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
-
-                <li><a class="textomenupie" href="./pages/contacto.html">Contacto</a></li>
-                <li><a class="textomenupie" href="./pages/termycond.html">Políticas de Privacidad</a></li>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
                 </p>
             </div>
             <div class="newsletter">
@@ -405,7 +399,6 @@
         <!--FIN PIE DE PAGINA-->
     </main>
     <!--FIN DEL MAIN-->
-
     <!--FOOTER-->
     <footer class="footer">
         <div>
@@ -416,8 +409,8 @@
         </div>
     </footer>
     <!--FIN DEL FOOTER-->
-
     <a href="https://walink.co/541ed3" class="whatsapp" target="_blank"> <i
             class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
     <a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
 </body>
+</html>
