--- a/pages/ficha-prop-3.html
+++ b/pages/ficha-prop-3.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <!--INICIO DEL HEADER-->
     <header>
         <nav class="navbar">
@@ -66,7 +65,6 @@
                 <ul class="submenu">
                     <li><a href="venta-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
                     <li class="has-dropdown">
-
                         <a href="#" class="menu-link">Departamentos
                             <span class="arrow"></span>
                         </a>
@@ -93,18 +91,14 @@
                     <li><a href="venta-2-galpon.html" class="menu-link">Galpon</a></li>
                     <li><a href="venta-2-oficina.html" class="menu-link">Oficina/Local</a></li>
                     <li><a href="venta-2-terreno.html" class="menu-link">Terrenos</a></li>
+                </ul>
             </li>
-            </ul>
             <li><a href="quienessomos.html" class="menu-link">QUIENES SOMOS</a></li>
             <li><a href="contacto.html" class="menu-link">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
     <!--FIN DEL HEADER-->
-
-
-
-
     <!--INICIO DEL MAIN-->
     <main>
         <section class="margenbien">
@@ -115,8 +109,6 @@
                 <div class="page">/ CASTELLANOS 1720</div>
             </div>
         </section>
-
-
         <section class="tarjetapropiedad">
             <div class="columna1prop">
                 <div class="titulocasa">
@@ -249,7 +241,6 @@
                     <p>Galpón al frente, amplio, con doble acceso, tanto por porton, como por acceso independiente.
                         Tipo LOFT con entrepiso, baño y cocina pequeña. Pequeña oficina. Posibilidad de mejoras.</p>
                 </div>
-
                 <div class="caractgrales">
                     <h3>DISTRIBUCIÓN DE AMBIENTES</h3>
                     <ul class="caractgrales3">
@@ -282,7 +273,6 @@
                         </li>
                     </ul>
                 </div>
-
                 <div class="caractgrales">
                     <h3>SERVICIOS</h3>
                     <ul class="caractgrales3">
@@ -331,7 +321,6 @@
                 </div>
             </div>
         </section>
-
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
@@ -362,11 +351,10 @@
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
-
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
             <div class="piecolum1">
-                <li class="logopie"><img width="210" src="./img/logo blanco.png" alt="logo_blanco"></li>
+                <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
                 <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
                         1811 Of. 01</li></a>
                 <li class="textopie">Teléfono: (0341) 3132818</li>
@@ -375,13 +363,12 @@
             </div>
             <div class="titulomenupie">
                 <h4>SERVICIOS</h4>
-                <li><a class="textomenupie" href="./pages/quienessomos.html">Quienes Somos</a></li>
-                <li><a class="textomenupie" href="./pages/administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
                 <li><a class="textomenupie" href="alq-1-ficha-todas.html">Alquiler</a>
                 <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
-
-                <li><a class="textomenupie" href="./pages/contacto.html">Contacto</a></li>
-                <li><a class="textomenupie" href="./pages/termycond.html">Políticas de Privacidad</a></li>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
                 </p>
             </div>
             <div class="newsletter">
@@ -399,7 +386,6 @@
         <!--FIN PIE DE PAGINA-->
     </main>
     <!--FIN DEL MAIN-->
-
     <!--FOOTER-->
     <footer class="footer">
         <div>
@@ -410,8 +396,8 @@
         </div>
     </footer>
     <!--FIN DEL FOOTER-->
-
     <a href="https://walink.co/541ed3" class="whatsapp" target="_blank"> <i
             class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
     <a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
 </body>
+</html>
