--- a/pages/ficha-prop-4.html
+++ b/pages/ficha-prop-4.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <!--INICIO DEL HEADER-->
     <header>
         <nav class="navbar">
@@ -66,7 +65,6 @@
                 <ul class="submenu">
                     <li><a href="venta-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
                     <li class="has-dropdown">
-
                         <a href="#" class="menu-link">Departamentos
                             <span class="arrow"></span>
                         </a>
@@ -93,18 +91,14 @@
                     <li><a href="venta-2-galpon.html" class="menu-link">Galpon</a></li>
                     <li><a href="venta-2-oficina.html" class="menu-link">Oficina/Local</a></li>
                     <li><a href="venta-2-terreno.html" class="menu-link">Terrenos</a></li>
+                </ul>
             </li>
-            </ul>
             <li><a href="quienessomos.html" class="menu-link">QUIENES SOMOS</a></li>
             <li><a href="contacto.html" class="menu-link">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
     <!--FIN DEL HEADER-->
-
-
-
-
     <!--INICIO DEL MAIN-->
     <main>
         <section class="margenbien">
@@ -170,7 +164,11 @@
                                 <div class="flip-card-ficha">
                                     <div class="flip-card-inner-ficha">
                                         <div class="flip-card-front-ficha">
-                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3349.0074208375436!2d-60.68678468529371!3d-32.92440217809162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b653507184c927%3A0x24a3066dfa4c9544!2sD%C3%ADaz%20V%C3%A9lez%20350%2C%20S2013%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1668565879269!5m2!1ses!2sar" width="640" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                        </div>
+                                            <iframe
+                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3349.0074208375436!2d-60.68678468529371!3d-32.92440217809162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b653507184c927%3A0x24a3066dfa4c9544!2sD%C3%ADaz%20V%C3%A9lez%20350%2C%20S2013%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1668565879269!5m2!1ses!2sar"
+                                                width="640" height="320" style="border:0;" allowfullscreen=""
+                                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -198,7 +196,6 @@
                         <p>--</p>
                         <h5>Financiacion: </h5>
                         <p>--</p>
-
                     </div>
                     <div class="resumen2">
                         <h3>Superficie:</h3>
@@ -213,7 +210,6 @@
                         <p>---</p>
                     </div>
                 </div>
-
                 <div class="caractgrales">
                     <h3>CARACTERISTICAS GENERALES</h3>
                     <ul class="caractgrales1">
@@ -247,7 +243,6 @@
                         por dos dormitorios y cocina comedor. Baño amplio. Patio pequeño con parrilero. La casa
                         cuenta con gas natural.</p>
                 </div>
-
                 <div class="caractgrales">
                     <h3>DISTRIBUCIÓN DE AMBIENTES</h3>
                     <ul class="caractgrales3">
@@ -330,10 +325,8 @@
                                 class="fa-brands fa-instagram fa-2x"></i></a>
                     </div>
                 </div>
-
             </div>
         </section>
-
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
@@ -364,11 +357,10 @@
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
-
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
             <div class="piecolum1">
-                <li class="logopie"><img width="210" src="./img/logo blanco.png" alt="logo_blanco"></li>
+                <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
                 <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
                         1811 Of. 01</li></a>
                 <li class="textopie">Teléfono: (0341) 3132818</li>
@@ -377,13 +369,12 @@
             </div>
             <div class="titulomenupie">
                 <h4>SERVICIOS</h4>
-                <li><a class="textomenupie" href="./pages/quienessomos.html">Quienes Somos</a></li>
-                <li><a class="textomenupie" href="./pages/administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
                 <li><a class="textomenupie" href="alq-1-ficha-todas.html">Alquiler</a>
                 <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
-
-                <li><a class="textomenupie" href="./pages/contacto.html">Contacto</a></li>
-                <li><a class="textomenupie" href="./pages/termycond.html">Políticas de Privacidad</a></li>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
                 </p>
             </div>
             <div class="newsletter">
@@ -401,7 +392,6 @@
         <!--FIN PIE DE PAGINA-->
     </main>
     <!--FIN DEL MAIN-->
-
     <!--FOOTER-->
     <footer class="footer">
         <div>
@@ -412,8 +402,9 @@
         </div>
     </footer>
     <!--FIN DEL FOOTER-->
-
     <a href="https://walink.co/541ed3" class="whatsapp" target="_blank"> <i
             class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
     <a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
 </body>
+
+</html>
