--- a/pages/ficha-prop-6.html
+++ b/pages/ficha-prop-6.html
@@ -65,7 +65,6 @@
                 <ul class="submenu">
                     <li><a href="venta-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
                     <li class="has-dropdown">
-
                         <a href="#" class="menu-link">Departamentos
                             <span class="arrow"></span>
                         </a>
@@ -92,8 +91,8 @@
                     <li><a href="venta-2-galpon.html" class="menu-link">Galpon</a></li>
                     <li><a href="venta-2-oficina.html" class="menu-link">Oficina/Local</a></li>
                     <li><a href="venta-2-terreno.html" class="menu-link">Terrenos</a></li>
+                </ul>
             </li>
-            </ul>
             <li><a href="quienessomos.html" class="menu-link">QUIENES SOMOS</a></li>
             <li><a href="contacto.html" class="menu-link">CONTACTO</a></li>
             </ul>
@@ -105,8 +104,8 @@
         <section class="margenbien">
             <div class="menuretorno">
                 <div class="index"><a href="../index.html"> INICIO</a></div>
-                <div class="index2"><a href="ven-1-ficha-todas.html"> / ALQUILER</a></div>
-                <div class="index3"><a href="ven-2-casa.html"> / CASA</a></div>
+                <div class="index2"><a href="venta-1-ficha-todas.html"> / ALQUILER</a></div>
+                <div class="index3"><a href="venta-2-casa.html"> / CASA</a></div>
                 <div class="index4"><a href="venta-3-casa-4d.html"> / 4 DORMITORIOS</a></div>
                 <div class="page">/ PTE. ROCA 2080</div>
             </div>
@@ -165,7 +164,11 @@
                                 <div class="flip-card-ficha">
                                     <div class="flip-card-inner-ficha">
                                         <div class="flip-card-front-ficha">
-                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.646999391322!2d-60.651373085292455!3d-32.960328079909935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab0c601b9c57%3A0x89f02b3a13c9b360!2sPres.%20Roca%202080%2C%20S2000GAH%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1668566417170!5m2!1ses!2sar" width="640" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                                        </div>
+                                            <iframe
+                                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.646999391322!2d-60.651373085292455!3d-32.960328079909935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab0c601b9c57%3A0x89f02b3a13c9b360!2sPres.%20Roca%202080%2C%20S2000GAH%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1668566417170!5m2!1ses!2sar"
+                                                width="640" height="320" style="border:0;" allowfullscreen=""
+                                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -193,7 +196,6 @@
                         <p>NO</p>
                         <h5>Financiacion: </h5>
                         <p>SI</p>
-
                     </div>
                     <div class="resumen2">
                         <h3>Superficie:</h3>
@@ -325,10 +327,8 @@
                                 class="fa-brands fa-instagram fa-2x"></i></a>
                     </div>
                 </div>
-
             </div>
         </section>
-
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
@@ -358,11 +358,10 @@
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
-
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
             <div class="piecolum1">
-                <li class="logopie"><img width="210" src="./img/logo blanco.png" alt="logo_blanco"></li>
+                <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
                 <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
                         1811 Of. 01</li></a>
                 <li class="textopie">Teléfono: (0341) 3132818</li>
@@ -371,13 +370,12 @@
             </div>
             <div class="titulomenupie">
                 <h4>SERVICIOS</h4>
-                <li><a class="textomenupie" href="./pages/quienessomos.html">Quienes Somos</a></li>
-                <li><a class="textomenupie" href="./pages/administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
                 <li><a class="textomenupie" href="alq-1-ficha-todas.html">Alquiler</a>
                 <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
-
-                <li><a class="textomenupie" href="./pages/contacto.html">Contacto</a></li>
-                <li><a class="textomenupie" href="./pages/termycond.html">Políticas de Privacidad</a></li>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
                 </p>
             </div>
             <div class="newsletter">
@@ -395,7 +393,6 @@
         <!--FIN PIE DE PAGINA-->
     </main>
     <!--FIN DEL MAIN-->
-
     <!--FOOTER-->
     <footer class="footer">
         <div>
@@ -406,8 +403,9 @@
         </div>
     </footer>
     <!--FIN DEL FOOTER-->
-
     <a href="https://walink.co/541ed3" class="whatsapp" target="_blank"> <i
             class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
     <a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
 </body>
+
+</html>
