--- a/pages/venta-1-ficha-todas.html
+++ b/pages/venta-1-ficha-todas.html
@@ -12,96 +12,93 @@
 </head>
 
 <body>
-<!--INICIO DEL HEADER-->
-<header>
-    <nav class="navbar">
-        <div class="branding">
-            <a href="../index.html" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
-            </a>
-        </div>
-        <label for="input-hamburger" class="hamburger"></label>
-        <input type="checkbox" id="input-hamburger" hidden>
-        <ul class="menu">
-            <li><a href="../index.html" class="menu-link">INICIO</a></li>
-            <li><a href="administracion.html" class="menu-link">ADMINISTRACION</a></li>
+    <!--INICIO DEL HEADER-->
+    <header>
+        <nav class="navbar">
+            <div class="branding">
+                <a href="../index.html" class="branding-logo"> <img src="../img/logo blanco.png" alt="" class="logo">
+                </a>
+            </div>
+            <label for="input-hamburger" class="hamburger"></label>
+            <input type="checkbox" id="input-hamburger" hidden>
+            <ul class="menu">
+                <li><a href="../index.html" class="menu-link">INICIO</a></li>
+                <li><a href="administracion.html" class="menu-link">ADMINISTRACION</a></li>
+                <li class="has-dropdown">
+                    <a href="#" class="menu-link">ALQUILERES
+                        <span class="arrow"></span>
+                    </a>
+                    <ul class="submenu">
+                        <li><a href="alq-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
+                        <li class="has-dropdown">
+                            <a href="#" class="menu-link">Departamentos
+                                <span class="arrow"></span>
+                            </a>
+                            <ul class="submenu">
+                                <li><a href="alq-2-dpto.html" class="menu-link">> Ver Todos</a></li>
+                                <li><a href="alq-3-dpto-mono.html" class="menu-link">> Monoambiente</a></li>
+                                <li><a href="alq-3-dpto-2d.html" class="menu-link">> 1 Dormitorio</a></li>
+                                <li><a href="alq-3-dpto-2d.html" class="menu-link">> 2 Dormitorios</a></li>
+                                <li><a href="alq-3-dpto-3d.html" class="menu-link">> 3 Dormitorios</a></li>
+                                <li><a href="alq-3-dpto-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
+                            </ul>
+                        <li class="has-dropdown">
+                            <a href="#" class="menu-link">Casas
+                                <span class="arrow"></span>
+                            </a>
+                            <ul class="submenu">
+                                <li><a href="alq-2-casa.html" class="menu-link">> Ver Todos</a></li>
+                                <li><a href="alq-3-casa-1d.html" class="menu-link">> 1 Dormitorio</a></li>
+                                <li><a href="alq-3-casa-2d.html" class="menu-link">> 2 Dormitorios</a></li>
+                                <li><a href="alq-3-casa-3d.html" class="menu-link">> 3 Dormitorios</a></li>
+                                <li><a href="alq-3-casa-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
+                            </ul>
+                        <li><a href="alq-2-cochera.html" class="menu-link">Cochera</a></li>
+                        <li><a href="alq-2-galpon.html" class="menu-link">Galpon</a></li>
+                        <li><a href="alq-2-oficina.html" class="menu-link">Oficina/Local</a></li>
+                </li>
+            </ul>
             <li class="has-dropdown">
-                <a href="#" class="menu-link">ALQUILERES
+                <a href="#" class="menu-link">VENTAS
                     <span class="arrow"></span>
                 </a>
                 <ul class="submenu">
-                    <li><a href="alq-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
+                    <li><a href="venta-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
                     <li class="has-dropdown">
                         <a href="#" class="menu-link">Departamentos
                             <span class="arrow"></span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="alq-2-dpto.html" class="menu-link">> Ver Todos</a></li>
-                            <li><a href="alq-3-dpto-mono.html" class="menu-link">> Monoambiente</a></li>
-                            <li><a href="alq-3-dpto-2d.html" class="menu-link">> 1 Dormitorio</a></li>
-                            <li><a href="alq-3-dpto-2d.html" class="menu-link">> 2 Dormitorios</a></li>
-                            <li><a href="alq-3-dpto-3d.html" class="menu-link">> 3 Dormitorios</a></li>
-                            <li><a href="alq-3-dpto-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
+                            <li><a href="venta-2-depto.html" class="menu-link">> Ver Todos</a></li>
+                            <li><a href="venta-3-dpto-mono.html" class="menu-link">> Monoambiente</a></li>
+                            <li><a href="venta-3-dpto-1d.html" class="menu-link">> 1 Dormitorio</a></li>
+                            <li><a href="venta-3-dpto-2d.html" class="menu-link">> 2 Dormitorios</a></li>
+                            <li><a href="venta-3-dpto-3d.html" class="menu-link">> 3 Dormitorios</a></li>
+                            <li><a href="venta-3-dpto-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
                         </ul>
                     <li class="has-dropdown">
-                        <a href="#" class="menu-link">Casas
+                        <a href="./" class="menu-link">Casas
                             <span class="arrow"></span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="alq-2-casa.html" class="menu-link">> Ver Todos</a></li>
-                            <li><a href="alq-3-casa-1d.html" class="menu-link">> 1 Dormitorio</a></li>
-                            <li><a href="alq-3-casa-2d.html" class="menu-link">> 2 Dormitorios</a></li>
-                            <li><a href="alq-3-casa-3d.html" class="menu-link">> 3 Dormitorios</a></li>
-                            <li><a href="alq-3-casa-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
+                            <li><a href="venta-2-casa.html" class="menu-link">> Ver Todos</a></li>
+                            <li><a href="venta-3-casa-1d.html" class="menu-link">> 1 Dormitorio</a></li>
+                            <li><a href="venta-3-casa-2d.html" class="menu-link">> 2 Dormitorios</a></li>
+                            <li><a href="venta-3-casa-3d.html" class="menu-link">> 3 Dormitorios</a></li>
+                            <li><a href="venta-3-casa-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
                         </ul>
-                    <li><a href="alq-2-cochera.html" class="menu-link">Cochera</a></li>
-                    <li><a href="alq-2-galpon.html" class="menu-link">Galpon</a></li>
-                    <li><a href="alq-2-oficina.html" class="menu-link">Oficina/Local</a></li>
+                    <li><a href="venta-2-cochera.html" class="menu-link">Cochera</a></li>
+                    <li><a href="venta-2-galpon.html" class="menu-link">Galpon</a></li>
+                    <li><a href="venta-2-oficina.html" class="menu-link">Oficina/Local</a></li>
+                    <li><a href="venta-2-terreno.html" class="menu-link">Terrenos</a></li>
+                </ul>
             </li>
-        </ul>
-        <li class="has-dropdown">
-            <a href="#" class="menu-link">VENTAS
-                <span class="arrow"></span>
-            </a>
-            <ul class="submenu">
-                <li><a href="venta-1-ficha-todas.html" class="menu-link">Ver Todos</a></li>
-                <li class="has-dropdown">
-
-                    <a href="#" class="menu-link">Departamentos
-                        <span class="arrow"></span>
-                    </a>
-                    <ul class="submenu">
-                        <li><a href="venta-2-depto.html" class="menu-link">> Ver Todos</a></li>
-                        <li><a href="venta-3-dpto-mono.html" class="menu-link">> Monoambiente</a></li>
-                        <li><a href="venta-3-dpto-1d.html" class="menu-link">> 1 Dormitorio</a></li>
-                        <li><a href="venta-3-dpto-2d.html" class="menu-link">> 2 Dormitorios</a></li>
-                        <li><a href="venta-3-dpto-3d.html" class="menu-link">> 3 Dormitorios</a></li>
-                        <li><a href="venta-3-dpto-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
-                    </ul>
-                <li class="has-dropdown">
-                    <a href="./" class="menu-link">Casas
-                        <span class="arrow"></span>
-                    </a>
-                    <ul class="submenu">
-                        <li><a href="venta-2-casa.html" class="menu-link">> Ver Todos</a></li>
-                        <li><a href="venta-3-casa-1d.html" class="menu-link">> 1 Dormitorio</a></li>
-                        <li><a href="venta-3-casa-2d.html" class="menu-link">> 2 Dormitorios</a></li>
-                        <li><a href="venta-3-casa-3d.html" class="menu-link">> 3 Dormitorios</a></li>
-                        <li><a href="venta-3-casa-4d.html" class="menu-link">> 4+ Dormitorios</a></li>
-                    </ul>
-                <li><a href="venta-2-cochera.html" class="menu-link">Cochera</a></li>
-                <li><a href="venta-2-galpon.html" class="menu-link">Galpon</a></li>
-                <li><a href="venta-2-oficina.html" class="menu-link">Oficina/Local</a></li>
-                <li><a href="venta-2-terreno.html" class="menu-link">Terrenos</a></li>
-        </li>
-        </ul>
-        <li><a href="quienessomos.html" class="menu-link">QUIENES SOMOS</a></li>
-        <li><a href="contacto.html" class="menu-link">CONTACTO</a></li>
-        </ul>
-    </nav>
-</header>
-<!--FIN DEL HEADER-->
-
-
+            <li><a href="quienessomos.html" class="menu-link">QUIENES SOMOS</a></li>
+            <li><a href="contacto.html" class="menu-link">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!--FIN DEL HEADER-->
     <!--INICIO DEL MAIN-->
     <main>
         <!--propiedades venta-->
@@ -154,7 +151,6 @@
                 </div>
             </div>
         </div>
-
         <!--FIN BUSCADOR DE PROPIEDADES-->
         <section>
             <div class="menuretorno">
@@ -185,7 +181,8 @@
                 <div class="card-index">
                     <div class="border-card">
                         <h4>COLODRERO 1600 - (Santa Fe)</h4>
-                        <img class="w-img" src="../img/WhatsApp Image 2021-03-15 at 10.30.08.jpeg" alt="sf" height="260">
+                        <img class="w-img" src="../img/WhatsApp Image 2021-03-15 at 10.30.08.jpeg" alt="sf"
+                            height="260">
                     </div>
                     <div class="bg-card">
                         <p>Casa - Con Cochera - Apta Comercial</p>
@@ -206,7 +203,7 @@
                     </div>
                     <div class="bg-card">
                         <p>Cochera - Opción Alquiler</p>
-                        <p><i class="fa fa-object-group"></i> 9 m<sup>2 </sup> 
+                        <p><i class="fa fa-object-group"></i> 9 m<sup>2 </sup>
                         <p>Precio Venta: u$s 22.000</p>
                         <button class="botonprop">
                             <a class="botonprop" href="ficha-prop-8.html" target="_blank">VER MAS</a>
@@ -216,9 +213,6 @@
             </div>
             </div>
         </section>
-
-
-
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
@@ -248,44 +242,41 @@
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
-
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
-                <div class="piecolum1">
-                    <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
-                    <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
-                            1811 Of. 01</li></a>
-                    <li class="textopie">Teléfono: (0341) 3132818</li>
-                    <li><a class="textopie"
-                            href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
-                </div>
-                <div class="titulomenupie">
-                    <h4>SERVICIOS</h4>
-                    <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
-                    <li><a class="textomenupie" href="administracion.html">Administración</a></li>
-                    <li><a class="textomenupie" href="alq-1-ficha-todas.html">Alquiler</a>
-                        <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
-        
-                    <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
-                    <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
-                    </p>
-                </div>
-                <div class="newsletter">
-                    <h4>NEWSLETTER</h4>
-                    <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
-                    <input type="submit" value="Suscribirse"></p>
-                </div>
-                <div class="redespie">
-                    <h4>REDES</h4>
-                    <a href="https://www.facebook.com/" target="blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
-                    <a href="https://www.instagram.com/" target="blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
-                </div>
+            <div class="piecolum1">
+                <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
+                <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
+                        1811 Of. 01</li></a>
+                <li class="textopie">Teléfono: (0341) 3132818</li>
+                <li><a class="textopie"
+                        href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
+            </div>
+            <div class="titulomenupie">
+                <h4>SERVICIOS</h4>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="alq-1-ficha-todas.html">Alquiler</a>
+                <li><a class="textomenupie" href="venta-1-ficha-todas.html">Venta</a>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
+                </p>
+            </div>
+            <div class="newsletter">
+                <h4>NEWSLETTER</h4>
+                <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
+                <input type="submit" value="Suscribirse"></p>
+            </div>
+            <div class="redespie">
+                <h4>REDES</h4>
+                <a href="https://www.facebook.com/" target="blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                <a href="https://www.instagram.com/" target="blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+            </div>
             </div>
         </section>
         <!--FIN PIE DE PAGINA-->
     </main>
     <!--FIN DEL MAIN-->
-
     <!--FOOTER-->
     <footer class="footer">
         <div>
@@ -297,9 +288,8 @@
     </footer>
     <!-- FIN DEL FOOTER-->
     <a href="https://walink.co/541ed3" class="whatsapp" target="_blank"> <i
-        class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
-<a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
-
+            class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
+    <a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
 </body>
 
 </html>
